@@ -48,6 +48,19 @@ struct MockDeps : public ArchNetworkBSD::Deps {
   std::shared_ptr<PollFD> m_pollFD;
 };
 
+#ifndef NDEBUG
+
+TEST(ArchNetworkBSDTests, pollSocket_negativeNum_death) {
+  MockDeps deps;
+  ArchNetworkBSD networkBSD(deps);
+
+  PollEntries entries{{nullptr, 0, 0}};
+
+  EXPECT_DEATH({ networkBSD.pollSocket(entries.data(), -1, 1); }, "num > 0");
+}
+
+#endif // DEBUG
+
 TEST(ArchNetworkBSDTests, pollSocket_zeroEntries_callsSleep) {
   MockDeps deps;
   ArchNetworkBSD networkBSD(deps);
